src/assets/scss/App.scss
@import "bootstrap/scss/bootstrap";
@import "./bootstrap-overrides.scss";

body {
	margin: 0;
	padding: 0;
}

.no-caret.dropdown-toggle::after {
	display: none !important;
}

.notif-toggle {
	position: relative;
}

.notif-icon-wrapper {
	position: relative;
	display: inline-block;
	width: 32px;
	height: 32px;
}

.notif-badge {
	position: absolute;
	top: -4px;
	right: 0;

	min-width: 18px;
	min-height: 18px;

	font-size: 10px;
	line-height: 1;

	display: flex;
	align-items: center;
	justify-content: center;

	padding: 0;
	pointer-events: none;
}

.btn .badge {
	position: absolute;
	top: -4px;
}

.navbar {
	border-style: solid;
	border-top: 0;
	border-left: 0;
	border-right: 0;
	border-width: 1px;
	border-color: #595c6d;
}

.footer {
	border-style: solid;
	border-bottom: 0;
	border-left: 0;
	border-right: 0;
	border-width: 1px;
	border-color: #595c6d;
}

